--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,9 @@ article {
   line-height: 1.3;
 }
 article figure {
+  float: right;
   width: 39%;
-  margin: 0 0 1.25em 1.25em;
+  margin: auto;
 }
 article figcaption {
 }
